--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "countries-list": "^2.6.1",
     "rc-slider": "^10.2.1",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
