--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -18,3 +18,5 @@ SMTP_EMAIL = 321dbfbf3bbf83
 SMTP_PASSWORD = 4bf0fea364728e
 SMTP_FROM_EMAIL = noreplay@layqa.com
 SMTP_FROM_NAME = Layqa
+
+ACCESS_TOKEN= APP_USR-6713521164401408-072411-1da7db3859ff94ac74471a042f7675db-42575302
