--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mercadopago/sdk-react": "^0.0.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "countries-list": "^2.6.1",
+    "dotenv": "^16.3.1",
+    "mercadopago": "^1.5.17",
     "rc-slider": "^10.2.1",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
