--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "cloudinary": "^1.37.3",
     "cloudinary-react": "^1.8.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
+    "mercadopago": "^1.5.17",
     "mongoose": "^7.3.1",
     "nodemailer": "^6.9.3",
     "validator": "^13.9.0"
