--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Nilo Echezarreta",
   "license": "ISC",
   "dependencies": {
+    "@mercadopago/sdk-react": "^0.0.14",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
